# AI_orchestration

./: .gitignore  PDF_Walkthrough.md  pyproject.toml  requirements.txt
2_Prompts/: chat_prompt.py  dynamic_prompt.py  project.py  project_prompt.py  static_prompt.py
3_Messages/: conversation.py  messages_basic.py  messages_chat.py
4_Project/: create_demo_pdf.py  crew.py  main.py  rag_crew.py
4_Project/config/: agents.yaml  rag_agents.yaml  rag_tasks.yaml  tasks.yaml
4_Project/data/faiss_index/: index.faiss  index.pkl
4_Project/rag/: __init__.py  ingest.py  retriever.py
4_Project/tools/: rag_tools.py
5_Vector_Databases/: embeddings.py  rag_pipeline.py  retrieval.py  vector_store.py
ai_orchestration/: README.md  pyproject.toml
ai_orchestration/src/ai_orchestration/: crew.py  main.py
