[project]
name = "ai_orchestration"
version = "0.1.0"
description = "AI_orchestration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
ai_orchestration = "ai_orchestration.main:run"
run_crew = "ai_orchestration.main:run"
train = "ai_orchestration.main:train"
replay = "ai_orchestration.main:replay"
test = "ai_orchestration.main:test"
run_with_trigger = "ai_orchestration.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
